Audio and more connection window stuff